--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src -s -D -d dist",
     "start": "node dist",
-    "test": "ENVIRONMENT=test istanbul cover _mocha -- --reporter spec --compilers js:babel-register --require babel-polyfill --recursive ./test"
+    "test": "scripts/test.sh"
   },
   "repository": {
     "type": "git",
