--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "express-session": "^1.15.0",
     "google-auth-library": "^0.10.0",
     "pg": "^6.1.2"
   },
