--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist",
   "scripts": {
     "build": "babel src -s -D -d dist",
+    "clean": "rm -rf dist",
     "start": "node dist",
-    "test": "scripts/test.sh"
+    "test": "scripts/test.sh",
+    "crawler": "node dist/crawler"
   },
   "repository": {
     "type": "git",
@@ -24,8 +26,7 @@
     "express": "^4.14.0",
     "express-session": "^1.15.0",
     "google-auth-library": "^0.10.0",
-    "mongoose": "^4.8.5",
-    "pg": "^6.1.2"
+    "mongoose": "^4.8.5"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -33,8 +34,11 @@
     "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
+    "cheerio": "^0.22.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "supertest": "^2.0.1"
+    "request": "^2.79.0",
+    "supertest": "^2.0.1",
+    "url-parse": "^1.1.8"
   }
 }
