--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "An application for making multi-year plans for UCI programs, with checks for prerequisites, major requirements, course availability, etc.",
   "main": "dist",
   "scripts": {
-    "build": "babel src -s -D -d dist",
+    "start": "babel-watch src",
     "clean": "rm -rf dist",
-    "start": "node dist",
-    "test": "scripts/test.sh",
+    "test": "nodemon src --exec scripts/test.sh",
     "crawler": "node dist/crawler"
   },
   "repository": {
@@ -30,13 +29,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-core": "^6.23.1",
     "babel-polyfill": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.22.0",
+    "babel-watch": "^2.0.6",
     "chai": "^3.5.0",
     "cheerio": "^0.22.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "request": "^2.79.0",
     "supertest": "^2.0.1",
     "url-parse": "^1.1.8"
