--- a/package.json
+++ b/package.json
@@ -26,13 +26,21 @@
     "express": "^4.14.0",
     "express-session": "^1.15.0",
     "google-auth-library": "^0.10.0",
-    "mongoose": "^4.8.5"
+    "history": "^4.5.1",
+    "mongoose": "^4.8.5",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.23.1",
     "babel-polyfill": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-watch": "^2.0.6",
     "chai": "^3.5.0",
