--- a/package.json
+++ b/package.json
@@ -51,10 +51,13 @@
     "babel-watch": "^2.0.6",
     "chai": "^3.5.0",
     "cheerio": "^0.22.0",
+    "css-loader": "^0.26.4",
+    "extract-text-webpack-plugin": "^2.1.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "request": "^2.79.0",
+    "style-loader": "^0.13.2",
     "supertest": "^2.0.1",
     "url-parse": "^1.1.8",
     "webpack": "^2.2.1",
