--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
       "no-use-before-define": 0,
       "max-len": [2, 100],
       "quote-props": [2, "consistent-as-needed"],
+      "react/forbid-prop-types": [2, { "forbid": ["any", "array"] }],
       "react/jsx-filename-extension": 0
     }
 }
