--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run build:client && npm run build:server",
     "clean": "rm -rf dist",
     "lint": "./node_modules/.bin/eslint . || true",
-    "test": "NODE_ENV=test scripts/test.sh",
+    "test": "cd api && NODE_ENV=test ./test.sh",
     "crawler": "babel-node crawler"
   },
   "repository": {
