--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "express-session": "^1.15.0",
     "google-auth-library": "^0.10.0",
     "if-env": "^1.0.0",
+    "material-ui": "^0.17.1",
     "mongoose": "^4.8.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.3",
     "request": "^2.81.0"
